--- a/index.html
+++ b/index.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
+
 <head>
     <title>Pascal Jurion</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
+
 </head>
+
 <body>
-    <h1>Developpeur web</h1>
+    <div class="container">
+
+            <div class="loading-screen"></div>
+           
+            <div class="loader">
+                  <div class="ringOne ring"><img src="img/ring.png" alt="aa">
+                  </div>
+                  <div class="ringTwo ring"><img src="img/ring.png" alt="aa">
+                  </div>
+            </div>
+
+      </div>
+      <div class="title">
+          <h1 class="name">Pascal Jurion</h1>
+          <h2>Développeur web</h2>
+
+      </div>
+    <!-- <section class="home">
+
+        
+
+    </section> -->
+
+
+    <figure>
+        <img class="fonzzzzdecran" src="img/pj.jpg" alt="Image de présentation">
+    </figure>
+
+    <script src="app.js"></script>
 </body>
+
 </html>
