add anmation circle

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css?family=Passion+One&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.3/TweenMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.0.0-beta1/jquery.min.js"></script>
 
@@ -25,8 +26,8 @@
 
       </div>
       <div class="title">
-          <h1 class="name">Pascal Jurion</h1>
-          <h2>Développeur web</h2>
+          <h2 class="name">Pascal Jurion</h2>
+          <h1 class="job">Développeur web</h1>
 
       </div>
     <!-- <section class="home">
@@ -37,7 +38,7 @@
 
 
     <figure>
-        <img class="fonzzzzdecran" src="img/pj.jpg" alt="Image de présentation">
+       <!-- // <img class="fonzzzzdecran" src="img/home.jpg" alt="Image de présentation"> -->
     </figure>
 
     <script src="app.js"></script>
