create effect menu

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <!-- ////////////////////////////////////////////// NAVBAR /////////////////////////////////////////////////// -->
   <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light opaque-navbar">
     <a class="navbar-brand" href="#">
-      <img src="./img/icons/curriculum-logo.svg" width="30" height="30" class="d-inline-block align-top" alt=""
+      <img src="./img/icons/curriculum-logo.svg" width="30" height="30" class="d-inline-block align-top" alt="logo curiculum vitaé"
         loading="lazy">
       Curiculum Vitaé
     </a>
@@ -29,20 +29,17 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ">
-        <!-- <li class="nav-item active">
-          <a class="nav-link" href="#">Accueil <span class="sr-only">(current)</span></a>
-        </li> -->
         <li class="nav-item">
-          <a class="nav-link" href="#about" id="formation">Formations</a>
+          <a class="nav-link nav-formation" href="#school" id="menu-formation">Formations</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#portfolio">Expériences</a>
+          <a class="nav-link nav-experience" href="#portfolio">Expériences</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#news">Compétences</a>
+          <a class="nav-link nav-skills" href="#news">Compétences</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
+          <a class="nav-link nav-contact" href="#contact">Contact</a>
         </li>
 
       </ul>
@@ -96,10 +93,10 @@
     </div>
 
   </div>
-  <!-- ////////////////////////////////////////////// ROUTE /////////////////////////////////////////////////// -->
+  <!-- ////////////////////////////////////////////// FORMATIONS /////////////////////////////////////////////////// -->
 
   <div class="container">
-    <div id="about-me">
+    <div id="school">
       <h3 id="about" class="about">MES FORMATIONS</h3>
     </div>
 
