change button contact to href

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   <!-- ////////////////////////////////////////////// NAVBAR /////////////////////////////////////////////////// -->
   <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light opaque-navbar">
     <a class="navbar-brand" href="#">
-      <img src="./img/icons/curriculum-logo.svg" width="30" height="30" class="d-inline-block align-top" alt="logo curiculum vitaé"
-        loading="lazy">
+      <img src="./img/icons/curriculum-logo.svg" width="30" height="30" class="d-inline-block align-top"
+        alt="logo curiculum vitaé" loading="lazy">
       Curiculum Vitaé
     </a>
 
@@ -60,10 +60,9 @@
           <span class="letters">Développeur Web</span>
         </span>
       </h1>
-      <div class="buttons">
-        <button class="btnContact rellax" data-rellax-speed="-8">CONTACTEZ MOI</button>
+      <div class="btn-contact">
+        <a href="#">CONTACTEZ MOI</a>
       </div>
-
     </div>
     <div class="copyright">© 2020 by Pascal Jurion.</div>
 
