create page formation

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ">
         <li class="nav-item">
-          <a class="nav-link nav-formation" href="#school" id="menu-formation">Formations</a>
+          <a class="nav-link nav-formation" href="#school">Formations</a>
         </li>
         <li class="nav-item">
           <a class="nav-link nav-experience" href="#portfolio">Expériences</a>
@@ -101,27 +101,54 @@
 
 
     <div class="row">
-      <div class="col-sm-4">
-        <div class="quote">Design is not making beauty, beauty emerges from selection, affinities, integration, love.
-          <br><br>
-          <div style="font-size:45%; letter-spacing:4px;"> &mdash; LOUIS KAHN</div>
-        </div>
+      <div class="col">
+        2019 - 2020
+      </div>
+      <div class="col">
+        Développeur Web 
+      </div>
+      <div class="col">
+        <p>Titre profésionnel niveau III.</p>
+        <p>Wild Code school Reims</p>
+        <p>React Js - Node Js - Git - Méthode Agile</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        2019
+      </div>
+      <div class="col">
+        Formation Java JEE.
+      </div>
+      <div class="col">
+        <p>Titre profésionnel niveau III.</p>
+        <p>Afpa Amiens (80)</p>
+        <p>React Js - Node Js - Git - Méthode Agile</p>
       </div>
 
-
-      <div class="col-sm-4">
-        <div class="columns">Hi, I'm Jill Lee. I’m a web developer living in Fort Bonifacio, Philippines. I spend my
-          days learning about web development from back end programming (PHP, Django/Python, Ruby on Rails) to front end
-          engineering (HTML, CSS, and jQuery/Javascript),
-          digital accessibility, user experience and visual design.</div>
+    </div>
+    <div class="row">
+      <div class="col">
+        2016 - 2018
       </div>
-
-
-      <div class="col-sm-4">
-        <div class="columns">I'm extremely passionate about web development and design in all it’s forms and helping
-          small businesses build and improve their online presence. I worked in both small and big teams and I always
-          try to achieve the best solution for each case
-          or client.</div>
+      <div class="col">
+        Technicien supérieur en support informatique 
+      </div>
+      <div class="col">
+        <p>Titre profésionnel niveau III.</p>
+        <p>Greta Soissons (02)</p>
+        <p>React Js - Node Js - Git - Méthode Agile</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        1985
+      </div>
+      <div class="col">
+        <p>BEP Electro-technicien</p>
+      </div>
+      <div class="col">
+        <p>Lycée professionnel Verdun (55)</p>
       </div>
 
     </div>
@@ -135,9 +162,9 @@
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script> -->
+  <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> -->
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
