create multi pages

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ">
         <li class="nav-item">
-          <a class="nav-link nav-formation" href="#school">Formations</a>
+          <a class="nav-link nav-school" href="#school">Formations</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-experience" href="#portfolio">Expériences</a>
+          <a class="nav-link nav-job" href="#job">Expériences</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link nav-skills" href="#news">Compétences</a>
+          <a class="nav-link nav-skills" href="#skills">Compétences</a>
         </li>
         <li class="nav-item">
           <a class="nav-link nav-contact" href="#contact">Contact</a>
@@ -94,9 +94,9 @@
   </div>
   <!-- ////////////////////////////////////////////// FORMATIONS /////////////////////////////////////////////////// -->
 
-  <div class="container">
-    <div id="school">
-      <h3 id="about" class="about">MES FORMATIONS</h3>
+  <div class="container" id="school">
+    <div>
+      <h3 class="about">MES FORMATIONS</h3>
     </div>
 
 
@@ -105,7 +105,7 @@
         2019 - 2020
       </div>
       <div class="col">
-        Développeur Web 
+        Développeur Web
       </div>
       <div class="col">
         <p>Titre profésionnel niveau III.</p>
@@ -132,7 +132,73 @@
         2016 - 2018
       </div>
       <div class="col">
-        Technicien supérieur en support informatique 
+        Technicien supérieur en support informatique
+      </div>
+      <div class="col">
+        <p>Titre profésionnel niveau III.</p>
+        <p>Greta Soissons (02)</p>
+        <p>React Js - Node Js - Git - Méthode Agile</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        1985
+      </div>
+      <div class="col">
+        <p>BEP Electro-technicien</p>
+      </div>
+      <div class="col">
+        <p>Lycée professionnel Verdun (55)</p>
+      </div>
+
+    </div>
+  </div>
+
+
+  <div class="bgimg-1"></div>
+
+
+  <!-- ////////////////////////////////////////////// EXPERIENCES /////////////////////////////////////////////////// -->
+
+  <div class="container" id="job">
+    <div>
+      <h3 class="about">MES EXPERIENCES PROFESSIONNELS</h3>
+    </div>
+
+
+    <div class="row">
+      <div class="col">
+        2019 - 2020
+      </div>
+      <div class="col">
+        Développeur Web
+      </div>
+      <div class="col">
+        <p>Titre profésionnel niveau III.</p>
+        <p>Wild Code school Reims</p>
+        <p>React Js - Node Js - Git - Méthode Agile</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col">
+        2019
+      </div>
+      <div class="col">
+        Formation Java JEE.
+      </div>
+      <div class="col">
+        <p>Titre profésionnel niveau III.</p>
+        <p>Afpa Amiens (80)</p>
+        <p>React Js - Node Js - Git - Méthode Agile</p>
+      </div>
+
+    </div>
+    <div class="row">
+      <div class="col">
+        2016 - 2018
+      </div>
+      <div class="col">
+        Technicien supérieur en support informatique
       </div>
       <div class="col">
         <p>Titre profésionnel niveau III.</p>
@@ -157,8 +223,137 @@
 
   <div class="bgimg-2"></div>
 
+  <!-- /////////////////////////////////// SKILLS ///////////////////////////////////// -->
+
+  <div class="container">
+    <div id="skills">
+      <h3 id="choose" class="choose">WHY CHOOSE ME?</h3>
+    </div>
+  </div>
+  </div>
+
+  <!--social icons --->
+  <div class="container">
+    <div class="row">
+      <div class="social">
+        <div class="col-sm-4">
+          <i class="fa fa-heart-o" aria-hidden="true"></i>
+          </i>
+          <p class="social-header">MINIMALIST</p>
+          <p class="social-feature">I love minimalism for the freedom it has given me. Freedom — freedom from debt, from
+            clutter, and from the rat race — be it an unused item, unnecessary purchase, or unfulfilling task — I feel
+            an incredible sense of liberation.</p>
+
+        </div>
+      </div>
+
+      <div class="social">
+        <div class="col-sm-4">
+          <i class="fa fa-cogs" aria-hidden="true"></i>
+          <p class="social-header">RESPONSIBLE</p>
+          <p class="social-feature">Hardwork spotlights the character of people. Being responsible makes life better.
+          </p>
+
+        </div>
+      </div>
+
+      <div class="social">
+        <div class="col-sm-4">
+          <i class="fa fa-star-o" aria-hidden="true"></i>
+          <p class="social-header">CREATIVE</p>
+          <p class="social-feature">I like to have fun and genuinely give a sh*t about my clients. I get up in the
+            morning because I love what I do, making beautiful designs come to life.</p>
+
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="container">
+    <div class="row">
+      <div class="social">
+        <div class="col-sm-4">
+          <i class="fa fa-comments-o" aria-hidden="true"></i>
+          <p class="social-header">FRIENDLY</p>
+          <p class="social-feature">Laughter, it makes work more fun and transforms projects into a passion. I’ll treat
+            you fairly, share some laughs and work with you to achieve your goals and exceed expectations. </p>
+
+        </div>
+      </div>
+      <div class="social">
+        <div class="col-sm-4">
+          <i class="fa fa-clock-o" aria-hidden="true"></i>
+          <p class="social-header">PUNCTUAL</p>
+          <p class="social-feature">Consistently being on time is the product of proper planning, personal discipline,
+            and a respect for other people's time.</p>
+
+        </div>
+      </div>
+      <div class="social">
+        <div class="col-sm-4">
+          <i class="fa fa-diamond" aria-hidden="true"></i>
+          <p class="social-header">MAGIC</p>
+          <p class="social-feature">People love what other people are passionate about. I believe that we can do magic
+            through small things that we care about. "When magic through nerves and reason passes, Imagination, force,
+            and passion will thunder. The portrait of the world is changed." ~ Dejan Stojanovic</p>
 
 
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="bgimg-3"></div>
+  <!-- ////////////////////////////////// contact ///////////////////////////////// -->
+
+<!--contact section-->
+
+<div id="contact">
+  <h3 id="contact" class="contact">CONTACTS</h3>
+</div>
+
+
+
+<div class="container">
+  <div class="row">
+    <div class="contact-icons">
+      <div class="col-sm-4">
+
+        <i class="fa fa-phone-square" aria-hidden="true"></i>
+        <p class="contact-header">Téléphone</p>
+        <p class="contact-feature">+33 60 48 23 36</p>
+      </div>
+    </div>
+
+
+
+    <!-- <div class="contact-icons">
+      <div class="col-sm-4">
+
+        <i class="fa fa-map-marker" aria-hidden="true"></i>
+        <p class="contact-header">ADDRESS</p>
+        <p class="contact-feature">Cedar Crest Acacia Estates Philippines</p>
+      </div>
+    </div> -->
+
+
+
+    <div class="contact-icons">
+      <div class="col-sm-4">
+
+        <i class="fa fa-envelope" aria-hidden="true"></i>
+        <p class="contact-header">EMAIL</p>
+        <p class="contact-feature">jilllee.ace@outlook.com</p>
+      </div>
+    </div>
+
+
+  </div>
+</div>
+
+
+<!-- contact form section -->
+
+
+<div class="bgimg-4"></div>
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
