create page experiences

--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
           <span class="letters">Développeur Web</span>
         </span>
       </h1>
-      <div class="btn-contact">
+      <!-- <div class="buttons"> -->
+        <button type="button" class="btnContact">CONTACTEZ MOI</button>
+      <!-- </div> -->
+      <!-- <div class="btn-contact">
         <a href="#">CONTACTEZ MOI</a>
-      </div>
+      </div> -->
     </div>
     <div class="copyright">© 2020 by Pascal Jurion.</div>
 
@@ -92,7 +95,7 @@
     </div>
 
   </div>
-  <!-- ////////////////////////////////////////////// FORMATIONS /////////////////////////////////////////////////// -->
+  <!-- ////////////////////////////////////////////// FORMATIONS ////////////////////////////////////////////// -->
 
   <div class="container" id="school">
     <div>
@@ -158,7 +161,7 @@
   <div class="bgimg-1"></div>
 
 
-  <!-- ////////////////////////////////////////////// EXPERIENCES /////////////////////////////////////////////////// -->
+  <!-- ////////////////////////////////////////////// EXPERIENCES ////////////////////////////////////////////// -->
 
   <div class="container" id="job">
     <div>
@@ -223,8 +226,13 @@
 
   <div class="bgimg-2"></div>
 
-  <!-- /////////////////////////////////// SKILLS ///////////////////////////////////// -->
+  <!-- ////////////////////////////////////////////// SKILLS ////////////////////////////////////////////// -->
+<div class="container">
+  <div class="row logos-techno">
 
+    <img class="logos-techno" src="./img/icons/html.svg" alt="">
+  </div>
+</div>
   <div class="container">
     <div id="skills">
       <h3 id="choose" class="choose">WHY CHOOSE ME?</h3>
@@ -235,125 +243,111 @@
   <!--social icons --->
   <div class="container">
     <div class="row">
-      <div class="social">
-        <div class="col-sm-4">
-          <i class="fa fa-heart-o" aria-hidden="true"></i>
+      <!-- <div class="social"> -->
+        <div class="col-sm-4 social">
+          <img class="social-logo" src="./img/icons/scrum.svg" alt="Méthode scrum">
           </i>
-          <p class="social-header">MINIMALIST</p>
+          <p class="social-header">Esprit d'équipe</p>
           <p class="social-feature">I love minimalism for the freedom it has given me. Freedom — freedom from debt, from
             clutter, and from the rat race — be it an unused item, unnecessary purchase, or unfulfilling task — I feel
             an incredible sense of liberation.</p>
 
-        </div>
+        <!-- </div> -->
       </div>
 
-      <div class="social">
-        <div class="col-sm-4">
-          <i class="fa fa-cogs" aria-hidden="true"></i>
-          <p class="social-header">RESPONSIBLE</p>
+      <!-- <div class="social"> -->
+        <div class="col-sm-4 social">
+          <img class="social-logo" src="./img/icons/curious.svg" alt="Méthode scrum">
+          <p class="social-header">Curieux</p>
           <p class="social-feature">Hardwork spotlights the character of people. Being responsible makes life better.
           </p>
 
-        </div>
+        <!-- </div> -->
       </div>
 
-      <div class="social">
-        <div class="col-sm-4">
-          <i class="fa fa-star-o" aria-hidden="true"></i>
-          <p class="social-header">CREATIVE</p>
+      <!-- <div class="social"> -->
+        <div class="col-sm-4 social">
+          <img class="social-logo" src="./img/icons/creative.svg" alt="Méthode scrum">
+          <p class="social-header">Créatif</p>
           <p class="social-feature">I like to have fun and genuinely give a sh*t about my clients. I get up in the
             morning because I love what I do, making beautiful designs come to life.</p>
 
-        </div>
+        <!-- </div> -->
       </div>
     </div>
   </div>
   <div class="container">
     <div class="row">
-      <div class="social">
-        <div class="col-sm-4">
-          <i class="fa fa-comments-o" aria-hidden="true"></i>
-          <p class="social-header">FRIENDLY</p>
+      <!-- <div class="social"> -->
+        <div class="col-sm-4 social">
+          <img class="social-logo" src="./img/icons/historic.svg" alt="Méthode scrum">
+          <p class="social-header">Expérience</p>
           <p class="social-feature">Laughter, it makes work more fun and transforms projects into a passion. I’ll treat
             you fairly, share some laughs and work with you to achieve your goals and exceed expectations. </p>
 
-        </div>
+        <!-- </div> -->
       </div>
-      <div class="social">
-        <div class="col-sm-4">
-          <i class="fa fa-clock-o" aria-hidden="true"></i>
+      <!-- <div class="social"> -->
+        <div class="col-sm-4 social">
+          <img class="social-logo" src="./img/icons/historic.svg" alt="Méthode scrum">
           <p class="social-header">PUNCTUAL</p>
           <p class="social-feature">Consistently being on time is the product of proper planning, personal discipline,
             and a respect for other people's time.</p>
 
-        </div>
+        <!-- </div> -->
       </div>
-      <div class="social">
-        <div class="col-sm-4">
-          <i class="fa fa-diamond" aria-hidden="true"></i>
+      <!-- <div class="social"> -->
+        <div class="col-sm-4 social">
+          <img class="social-logo" src="./img/icons/historic.svg" alt="Méthode scrum">
           <p class="social-header">MAGIC</p>
           <p class="social-feature">People love what other people are passionate about. I believe that we can do magic
             through small things that we care about. "When magic through nerves and reason passes, Imagination, force,
             and passion will thunder. The portrait of the world is changed." ~ Dejan Stojanovic</p>
 
 
-        </div>
+        <!-- </div> -->
       </div>
     </div>
   </div>
-  <div class="bgimg-3"></div>
-  <!-- ////////////////////////////////// contact ///////////////////////////////// -->
-
-<!--contact section-->
-
+  <div class="bgimg-4"></div>
+  <!-- ////////////////////////////////////////////// CONTACT ////////////////////////////////////////////// -->
+  <div class="bgimg-2"></div>
 <div id="contact">
-  <h3 id="contact" class="contact">CONTACTS</h3>
+  <h3 id="contact-title" class="contact-title">CONTACTS</h3>
 </div>
-
-
 
 <div class="container">
-  <div class="row">
+  <div class="row container-contact">
     <div class="contact-icons">
-      <div class="col-sm-4">
-
-        <i class="fa fa-phone-square" aria-hidden="true"></i>
+      <div class="col-sm-4 item-contact">
+        <img class="logo-contact" src="./img/icons/phone.svg" alt="localisation du contact">
         <p class="contact-header">Téléphone</p>
-        <p class="contact-feature">+33 60 48 23 36</p>
+        <p class="contact-feature">06 04 48 23 36</p>
       </div>
     </div>
-
-
-
-    <!-- <div class="contact-icons">
-      <div class="col-sm-4">
-
-        <i class="fa fa-map-marker" aria-hidden="true"></i>
-        <p class="contact-header">ADDRESS</p>
-        <p class="contact-feature">Cedar Crest Acacia Estates Philippines</p>
-      </div>
-    </div> -->
-
-
 
     <div class="contact-icons">
-      <div class="col-sm-4">
-
-        <i class="fa fa-envelope" aria-hidden="true"></i>
-        <p class="contact-header">EMAIL</p>
-        <p class="contact-feature">jilllee.ace@outlook.com</p>
+      <div class="col-sm-4 item-contact">
+        <img class="logo-contact" src="./img/icons/localisation.svg" alt="localisation du contact">
+        <p class="contact-header">Adresse</p>
+        <p class="contact-feature">Hirson (02)</p>
       </div>
     </div>
 
-
+    <div class="contact-icons">
+      <div class="col-sm-4 item-contact">
+        <img class="logo-contact" src="./img/icons/mail.svg" alt="localisation du contact">
+        <p class="contact-header">email</p>
+        <p class="contact-feature">pjurion@protonmail.com</p>
+      </div>
+    </div>
   </div>
 </div>
 
 
-<!-- contact form section -->
 
 
-<div class="bgimg-4"></div>
+<!-- <div class="bgimg-2"></div> -->
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
