add icons techno

--- a/index.html
+++ b/index.html
@@ -227,11 +227,21 @@
   <div class="bgimg-2"></div>
 
   <!-- ////////////////////////////////////////////// SKILLS ////////////////////////////////////////////// -->
-<div class="container">
-  <div class="row logos-techno">
+<div class="container-fluid">
+  <!-- <div class="row logos-techno"> -->
+    <img class="logos-techno" src="./img/icons/techno/html.svg" alt="">
+    <img class="logos-techno" src="./img/icons/techno/css.svg" alt="">
+    <img class="logos-techno" src="./img/icons/techno/js.svg" alt="">
+    <img class="logos-techno" src="./img/icons/techno/ci.svg" alt="">
+    <img class="logos-techno" src="./img/icons/techno/php.svg" alt="">
+    <img class="logos-techno" src="./img/icons/techno/react.svg" alt="">
+    <img class="logos-techno" src="./img/icons/techno/git.svg" alt="">
+    <img class="logos-techno" src="./img/icons/techno/wp.svg" alt="">
+    <img class="logos-techno" src="./img/icons/techno/linux.svg" alt="">
+    <img class="logos-techno" src="./img/icons/techno/sql.svg" alt="">
+    <img class="logos-techno" src="./img/icons/techno/scrum.svg" alt="">
 
-    <img class="logos-techno" src="./img/icons/html.svg" alt="">
-  </div>
+  <!-- </div> -->
 </div>
   <div class="container">
     <div id="skills">
