--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </span>
       </h1>
       <!-- <div class="buttons"> -->
-        <button type="button" class="btnContact">CONTACTEZ MOI</button>
+      <button type="button" class="btnContact">CONTACTEZ MOI</button>
       <!-- </div> -->
       <!-- <div class="btn-contact">
         <a href="#">CONTACTEZ MOI</a>
@@ -227,22 +227,24 @@
   <div class="bgimg-2"></div>
 
   <!-- ////////////////////////////////////////////// SKILLS ////////////////////////////////////////////// -->
-<div class="container-fluid">
-  <!-- <div class="row logos-techno"> -->
-    <img class="logos-techno" src="./img/icons/techno/html.svg" alt="">
-    <img class="logos-techno" src="./img/icons/techno/css.svg" alt="">
-    <img class="logos-techno" src="./img/icons/techno/js.svg" alt="">
-    <img class="logos-techno" src="./img/icons/techno/ci.svg" alt="">
-    <img class="logos-techno" src="./img/icons/techno/php.svg" alt="">
-    <img class="logos-techno" src="./img/icons/techno/react.svg" alt="">
-    <img class="logos-techno" src="./img/icons/techno/git.svg" alt="">
-    <img class="logos-techno" src="./img/icons/techno/wp.svg" alt="">
-    <img class="logos-techno" src="./img/icons/techno/linux.svg" alt="">
-    <img class="logos-techno" src="./img/icons/techno/sql.svg" alt="">
-    <img class="logos-techno" src="./img/icons/techno/scrum.svg" alt="">
-
-  <!-- </div> -->
-</div>
+  <div class="container-fluid container-logos">
+    <div class="row">
+      <div class="col">
+        <img class="logos-techno" src="./img/icons/techno/html.svg" alt="">
+        <img class="logos-techno" src="./img/icons/techno/css.svg" alt="">
+        <img class="logos-techno" src="./img/icons/techno/js.svg" alt="">
+        <img class="logos-techno" src="./img/icons/techno/react.svg" alt="">
+        <img class="logos-techno" src="./img/icons/techno/php.svg" alt="">
+        <img class="logos-techno" src="./img/icons/techno/ci.svg" alt="">
+        <img class="logos-techno" src="./img/icons/techno/sql.svg" alt="">
+        <img class="logos-techno" src="./img/icons/techno/linux.svg" alt="">
+        <img class="logos-techno" src="./img/icons/techno/git.svg" alt="">
+        <img class="logos-techno" src="./img/icons/techno/ps.svg" alt="">
+        <img class="logos-techno" src="./img/icons/techno/wp.svg" alt="">
+        <img class="logos-techno" src="./img/icons/techno/agile.png" alt="">
+      </div>
+    </div>
+  </div>
   <div class="container">
     <div id="skills">
       <h3 id="choose" class="choose">WHY CHOOSE ME?</h3>
@@ -254,33 +256,33 @@
   <div class="container">
     <div class="row">
       <!-- <div class="social"> -->
-        <div class="col-sm-4 social">
-          <img class="social-logo" src="./img/icons/scrum.svg" alt="Méthode scrum">
-          </i>
-          <p class="social-header">Esprit d'équipe</p>
-          <p class="social-feature">I love minimalism for the freedom it has given me. Freedom — freedom from debt, from
-            clutter, and from the rat race — be it an unused item, unnecessary purchase, or unfulfilling task — I feel
-            an incredible sense of liberation.</p>
+      <div class="col-sm-4 social">
+        <img class="social-logo" src="./img/icons/team.svg" alt="Méthode scrum">
+        </i>
+        <p class="social-header">Esprit d'équipe</p>
+        <p class="social-feature">I love minimalism for the freedom it has given me. Freedom — freedom from debt, from
+          clutter, and from the rat race — be it an unused item, unnecessary purchase, or unfulfilling task — I feel
+          an incredible sense of liberation.</p>
 
         <!-- </div> -->
       </div>
 
       <!-- <div class="social"> -->
-        <div class="col-sm-4 social">
-          <img class="social-logo" src="./img/icons/curious.svg" alt="Méthode scrum">
-          <p class="social-header">Curieux</p>
-          <p class="social-feature">Hardwork spotlights the character of people. Being responsible makes life better.
-          </p>
+      <div class="col-sm-4 social">
+        <img class="social-logo" src="./img/icons/curious.svg" alt="Méthode scrum">
+        <p class="social-header">Curieux</p>
+        <p class="social-feature">Hardwork spotlights the character of people. Being responsible makes life better.
+        </p>
 
         <!-- </div> -->
       </div>
 
       <!-- <div class="social"> -->
-        <div class="col-sm-4 social">
-          <img class="social-logo" src="./img/icons/creative.svg" alt="Méthode scrum">
-          <p class="social-header">Créatif</p>
-          <p class="social-feature">I like to have fun and genuinely give a sh*t about my clients. I get up in the
-            morning because I love what I do, making beautiful designs come to life.</p>
+      <div class="col-sm-4 social">
+        <img class="social-logo" src="./img/icons/creative.svg" alt="Méthode scrum">
+        <p class="social-header">Créatif</p>
+        <p class="social-feature">I like to have fun and genuinely give a sh*t about my clients. I get up in the
+          morning because I love what I do, making beautiful designs come to life.</p>
 
         <!-- </div> -->
       </div>
@@ -289,30 +291,30 @@
   <div class="container">
     <div class="row">
       <!-- <div class="social"> -->
-        <div class="col-sm-4 social">
-          <img class="social-logo" src="./img/icons/historic.svg" alt="Méthode scrum">
-          <p class="social-header">Expérience</p>
-          <p class="social-feature">Laughter, it makes work more fun and transforms projects into a passion. I’ll treat
-            you fairly, share some laughs and work with you to achieve your goals and exceed expectations. </p>
+      <div class="col-sm-4 social">
+        <img class="social-logo" src="./img/icons/historic.svg" alt="Méthode scrum">
+        <p class="social-header">Expérience</p>
+        <p class="social-feature">Laughter, it makes work more fun and transforms projects into a passion. I’ll treat
+          you fairly, share some laughs and work with you to achieve your goals and exceed expectations. </p>
 
         <!-- </div> -->
       </div>
       <!-- <div class="social"> -->
-        <div class="col-sm-4 social">
-          <img class="social-logo" src="./img/icons/historic.svg" alt="Méthode scrum">
-          <p class="social-header">PUNCTUAL</p>
-          <p class="social-feature">Consistently being on time is the product of proper planning, personal discipline,
-            and a respect for other people's time.</p>
+      <div class="col-sm-4 social">
+        <img class="social-logo" src="./img/icons/historic.svg" alt="Méthode scrum">
+        <p class="social-header">PUNCTUAL</p>
+        <p class="social-feature">Consistently being on time is the product of proper planning, personal discipline,
+          and a respect for other people's time.</p>
 
         <!-- </div> -->
       </div>
       <!-- <div class="social"> -->
-        <div class="col-sm-4 social">
-          <img class="social-logo" src="./img/icons/historic.svg" alt="Méthode scrum">
-          <p class="social-header">MAGIC</p>
-          <p class="social-feature">People love what other people are passionate about. I believe that we can do magic
-            through small things that we care about. "When magic through nerves and reason passes, Imagination, force,
-            and passion will thunder. The portrait of the world is changed." ~ Dejan Stojanovic</p>
+      <div class="col-sm-4 social">
+        <img class="social-logo" src="./img/icons/historic.svg" alt="Méthode scrum">
+        <p class="social-header">MAGIC</p>
+        <p class="social-feature">People love what other people are passionate about. I believe that we can do magic
+          through small things that we care about. "When magic through nerves and reason passes, Imagination, force,
+          and passion will thunder. The portrait of the world is changed." ~ Dejan Stojanovic</p>
 
 
         <!-- </div> -->
@@ -322,42 +324,42 @@
   <div class="bgimg-4"></div>
   <!-- ////////////////////////////////////////////// CONTACT ////////////////////////////////////////////// -->
   <div class="bgimg-2"></div>
-<div id="contact">
-  <h3 id="contact-title" class="contact-title">CONTACTS</h3>
-</div>
+  <div id="contact">
+    <h3 id="contact-title" class="contact-title">CONTACTS</h3>
+  </div>
 
-<div class="container">
-  <div class="row container-contact">
-    <div class="contact-icons">
-      <div class="col-sm-4 item-contact">
-        <img class="logo-contact" src="./img/icons/phone.svg" alt="localisation du contact">
-        <p class="contact-header">Téléphone</p>
-        <p class="contact-feature">06 04 48 23 36</p>
+  <div class="container">
+    <div class="row container-contact">
+      <div class="contact-icons">
+        <div class="col-sm-4 item-contact">
+          <img class="logo-contact" src="./img/icons/phone.svg" alt="localisation du contact">
+          <p class="contact-header">Téléphone</p>
+          <p class="contact-feature">06 04 48 23 36</p>
+        </div>
       </div>
-    </div>
 
-    <div class="contact-icons">
-      <div class="col-sm-4 item-contact">
-        <img class="logo-contact" src="./img/icons/localisation.svg" alt="localisation du contact">
-        <p class="contact-header">Adresse</p>
-        <p class="contact-feature">Hirson (02)</p>
+      <div class="contact-icons">
+        <div class="col-sm-4 item-contact">
+          <img class="logo-contact" src="./img/icons/localisation.svg" alt="localisation du contact">
+          <p class="contact-header">Adresse</p>
+          <p class="contact-feature">Hirson (02)</p>
+        </div>
       </div>
-    </div>
 
-    <div class="contact-icons">
-      <div class="col-sm-4 item-contact">
-        <img class="logo-contact" src="./img/icons/mail.svg" alt="localisation du contact">
-        <p class="contact-header">email</p>
-        <p class="contact-feature">pjurion@protonmail.com</p>
+      <div class="contact-icons">
+        <div class="col-sm-4 item-contact">
+          <img class="logo-contact" src="./img/icons/mail.svg" alt="localisation du contact">
+          <p class="contact-header">email</p>
+          <p class="contact-feature">pjurion@protonmail.com</p>
+        </div>
       </div>
     </div>
   </div>
-</div>
 
 
 
 
-<!-- <div class="bgimg-2"></div> -->
+  <!-- <div class="bgimg-2"></div> -->
 
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
