--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
       <div class="menu">
         <ion-icon name="options"></ion-icon>
       </div>
-      </nav>
       <h1 class="letters name">Pascal Jurion</h1>
       <h1 class="ml7 name" id="title">
         <span class="text-wrapper">
@@ -158,7 +157,7 @@
   </div>
 
 
-  <div class="bgimg-1"></div>
+  <div class="img-fluid bgimg-1"></div>
 
 
   <!-- ////////////////////////////////////////////// EXPERIENCES ////////////////////////////////////////////// -->
@@ -230,18 +229,18 @@
   <div class="container-fluid container-logos">
     <div class="row">
       <div class="col">
-        <img class="logos-techno" src="./img/icons/techno/html.svg" alt="">
-        <img class="logos-techno" src="./img/icons/techno/css.svg" alt="">
-        <img class="logos-techno" src="./img/icons/techno/js.svg" alt="">
-        <img class="logos-techno" src="./img/icons/techno/react.svg" alt="">
-        <img class="logos-techno" src="./img/icons/techno/php.svg" alt="">
-        <img class="logos-techno" src="./img/icons/techno/ci.svg" alt="">
-        <img class="logos-techno" src="./img/icons/techno/sql.svg" alt="">
-        <img class="logos-techno" src="./img/icons/techno/linux.svg" alt="">
-        <img class="logos-techno" src="./img/icons/techno/git.svg" alt="">
-        <img class="logos-techno" src="./img/icons/techno/ps.svg" alt="">
-        <img class="logos-techno" src="./img/icons/techno/wp.svg" alt="">
-        <img class="logos-techno" src="./img/icons/techno/agile.png" alt="">
+        <img class="logos-techno" src="./img/icons/techno/html.svg" alt="html5">
+        <img class="logos-techno" src="./img/icons/techno/css.svg" alt="css3">
+        <img class="logos-techno" src="./img/icons/techno/js.svg" alt="java script">
+        <img class="logos-techno" src="./img/icons/techno/react.svg" alt="react js">
+        <img class="logos-techno" src="./img/icons/techno/php.svg" alt="php">
+        <img class="logos-techno" src="./img/icons/techno/ci.svg" alt="codeigniter">
+        <img class="logos-techno" src="./img/icons/techno/sql.svg" alt="sql">
+        <img class="logos-techno" src="./img/icons/techno/linux.svg" alt="linux">
+        <img class="logos-techno" src="./img/icons/techno/git.svg" alt="git">
+        <img class="logos-techno" src="./img/icons/techno/ps.svg" alt="photoshop">
+        <img class="logos-techno" src="./img/icons/techno/wp.svg" alt="wordpress">
+        <img class="logos-techno" src="./img/icons/techno/agile.png" alt="méthode agile">
       </div>
     </div>
   </div>
@@ -250,21 +249,17 @@
       <h3 id="choose" class="choose">WHY CHOOSE ME?</h3>
     </div>
   </div>
-  </div>
 
-  <!--social icons --->
+
+  <!--social icons -->
   <div class="container">
     <div class="row">
-      <!-- <div class="social"> -->
       <div class="col-sm-4 social">
         <img class="social-logo" src="./img/icons/team.svg" alt="Méthode scrum">
-        </i>
         <p class="social-header">Esprit d'équipe</p>
         <p class="social-feature">I love minimalism for the freedom it has given me. Freedom — freedom from debt, from
           clutter, and from the rat race — be it an unused item, unnecessary purchase, or unfulfilling task — I feel
           an incredible sense of liberation.</p>
-
-        <!-- </div> -->
       </div>
 
       <!-- <div class="social"> -->
