--- a/index.html
+++ b/index.html
@@ -59,12 +59,7 @@
           <span class="letters">Développeur Web</span>
         </span>
       </h1>
-      <!-- <div class="buttons"> -->
       <button type="button" class="btnContact">CONTACTEZ MOI</button>
-      <!-- </div> -->
-      <!-- <div class="btn-contact">
-        <a href="#">CONTACTEZ MOI</a>
-      </div> -->
     </div>
     <div class="copyright">© 2020 by Pascal Jurion.</div>
 
@@ -94,16 +89,14 @@
     </div>
 
   </div>
-  <!-- ////////////////////////////////////////////// FORMATIONS ////////////////////////////////////////////// -->
+  <!-- ////////////////////////////////////////////// SCHOOL ////////////////////////////////////////////// -->
 
-  <div class="container" id="school">
-    <div>
-      <h3 class="about">MES FORMATIONS</h3>
-    </div>
-
-
-    <div class="row">
-      <div class="col">
+  <div id="school">
+    <h3 class="title-section">Mes formations</h3>
+  </div>
+  <div class="container">
+    <div class="row step">
+      <div class="col years">
         2019 - 2020
       </div>
       <div class="col">
@@ -111,25 +104,25 @@
       </div>
       <div class="col">
         <p>Titre profésionnel niveau III.</p>
-        <p>Wild Code school Reims</p>
+        <p>Wild Code school Reims (51)</p>
         <p>React Js - Node Js - Git - Méthode Agile</p>
       </div>
     </div>
-    <div class="row">
+    <div class="row step">
       <div class="col">
         2019
       </div>
       <div class="col">
-        Formation Java JEE.
+        Formation Java J2E.
       </div>
       <div class="col">
-        <p>Titre profésionnel niveau III.</p>
+        <p>Attestation de formation</p>
         <p>Afpa Amiens (80)</p>
-        <p>React Js - Node Js - Git - Méthode Agile</p>
+        <p>Java jee - Spring - JSF - Modélisation UML</p>
       </div>
 
     </div>
-    <div class="row">
+    <div class="row step">
       <div class="col">
         2016 - 2018
       </div>
@@ -139,10 +132,10 @@
       <div class="col">
         <p>Titre profésionnel niveau III.</p>
         <p>Greta Soissons (02)</p>
-        <p>React Js - Node Js - Git - Méthode Agile</p>
+        <p>windows serveur 2012 - Administratration linux - Architècture réseaux</p>
       </div>
     </div>
-    <div class="row">
+    <div class="row step">
       <div class="col">
         1985
       </div>
@@ -156,68 +149,42 @@
     </div>
   </div>
 
-
   <div class="img-fluid bgimg-1"></div>
 
 
   <!-- ////////////////////////////////////////////// EXPERIENCES ////////////////////////////////////////////// -->
 
-  <div class="container" id="job">
-    <div>
-      <h3 class="about">MES EXPERIENCES PROFESSIONNELS</h3>
-    </div>
+  <div id="job">
+    <h3 class="title-section">MES EXPERIENCES PROFESSIONNELS</h3>
+  </div>
 
-
+  <div class="container">
     <div class="row">
       <div class="col">
         2019 - 2020
       </div>
-      <div class="col">
-        Développeur Web
-      </div>
-      <div class="col">
-        <p>Titre profésionnel niveau III.</p>
-        <p>Wild Code school Reims</p>
-        <p>React Js - Node Js - Git - Méthode Agile</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        2019
-      </div>
-      <div class="col">
-        Formation Java JEE.
-      </div>
-      <div class="col">
-        <p>Titre profésionnel niveau III.</p>
-        <p>Afpa Amiens (80)</p>
-        <p>React Js - Node Js - Git - Méthode Agile</p>
-      </div>
-
-    </div>
-    <div class="row">
-      <div class="col">
-        2016 - 2018
-      </div>
-      <div class="col">
-        Technicien supérieur en support informatique
-      </div>
-      <div class="col">
-        <p>Titre profésionnel niveau III.</p>
-        <p>Greta Soissons (02)</p>
-        <p>React Js - Node Js - Git - Méthode Agile</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col">
-        1985
-      </div>
-      <div class="col">
-        <p>BEP Electro-technicien</p>
-      </div>
-      <div class="col">
-        <p>Lycée professionnel Verdun (55)</p>
-      </div>
+      <p>
+        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem, harum alias necessitatibus obcaecati veniam consequuntur. Error, exercitationem corporis corrupti molestiae fugit quasi numquam, fugiat laboriosam aliquid animi, repudiandae quis nobis.</span>
+        <span>Veritatis sequi, corporis et velit doloribus architecto quas id eveniet natus suscipit? Libero, sunt autem, ipsa vero ullam expedita ut eligendi vel quaerat mollitia amet id, labore illo blanditiis sapiente!</span>
+        <span>Ex harum dolorem impedit itaque rerum quasi architecto quis ipsam, nihil quisquam voluptatibus repellat dolor animi dolore excepturi molestias explicabo maxime ullam ut nam magni laudantium labore voluptas! Nobis, hic.</span>
+        <span>Nihil cumque blanditiis dolore nostrum! Porro culpa aperiam excepturi rerum, alias temporibus velit quasi nisi nesciunt ex beatae quod reiciendis dolores ullam, magni provident corporis fugit! Totam ad ducimus aut!</span>
+        <span>Cum, aperiam dolore architecto porro, veritatis sint eveniet accusamus exercitationem facilis, debitis recusandae. Atque, nobis recusandae? Eaque facere quod commodi ab saepe. Illum aspernatur iste explicabo veritatis tenetur, voluptatem a!</span>
+        <span>Fugiat at enim nostrum voluptates perferendis nam, ab expedita ut eos asperiores ea excepturi, reiciendis, debitis neque voluptatibus ratione. Tenetur dolore nostrum dicta qui praesentium neque nemo debitis ullam autem.</span>
+        <span>Possimus ea dolorem accusantium recusandae fugit, vitae nostrum placeat nobis. Doloremque similique, praesentium culpa nisi neque eius nobis. Quidem ipsam officiis quo esse non facilis quasi dolorum odit voluptatem mollitia!</span>
+        <span>Explicabo, est veritatis sequi corporis molestiae iure id libero eligendi perspiciatis atque, autem temporibus quos, amet magnam voluptatibus necessitatibus commodi officia exercitationem consectetur deserunt error eius facere. Quod, autem doloremque.</span>
+        <span>Vitae veniam, obcaecati assumenda dicta fugiat qui ea expedita quod numquam iusto? Sit, modi reiciendis, repellat ea minima in suscipit ipsam cumque laboriosam voluptate quaerat tempora quisquam, perferendis quasi? Necessitatibus?</span>
+        <span>Magnam eum saepe molestiae facilis, harum eligendi voluptates. Modi natus pariatur dicta veniam deleniti, recusandae itaque, sit aut consequuntur voluptatibus quae porro similique alias quia ipsa, saepe doloremque! Atque, odio.</span>
+        <span>Provident, ullam repudiandae? Eum assumenda deserunt iste repellat? Optio ea asperiores nisi quo alias laborum possimus deleniti impedit qui omnis modi eum commodi excepturi aliquid vitae, id quia at reiciendis!</span>
+        <span>Reiciendis dolor officiis voluptatum totam quod minima illo. Mollitia laudantium, commodi obcaecati voluptates veniam officiis repudiandae nulla assumenda dolorum quisquam iure nobis perspiciatis at optio est odio! Dolorem, quidem error!</span>
+        <span>Est ipsum cupiditate pariatur eius quaerat, atque recusandae nisi blanditiis, at temporibus exercitationem, illo amet quasi. Illum voluptatum ea dolores sapiente consectetur quia consequuntur iste. Laborum labore tenetur incidunt reiciendis!</span>
+        <span>Obcaecati recusandae maiores vero, blanditiis quas soluta quam id doloremque aspernatur molestiae vitae pariatur quos consectetur labore excepturi. Non debitis sint quas magni veniam fuga natus ullam voluptatibus neque perspiciatis!</span>
+        <span>Repellendus, doloribus voluptatum? Doloribus fuga commodi et labore cupiditate voluptas ad aliquid eligendi optio esse, fugiat qui consectetur ducimus sequi natus expedita officiis similique tempora dolorem aliquam magnam tenetur! Reiciendis!</span>
+        <span>Quos rem inventore quisquam labore corrupti provident, harum odit esse optio voluptate beatae perferendis consequuntur modi accusantium autem commodi, amet, sapiente voluptates incidunt obcaecati voluptas tempore culpa! Saepe, in dolorum?</span>
+        <span>Molestiae illo reiciendis deleniti odio aut. Beatae sit praesentium quod magni ullam architecto nobis dignissimos, consequuntur blanditiis laudantium repellendus nam ratione minima, culpa mollitia repellat repudiandae ipsa optio molestiae voluptate.</span>
+        <span>Assumenda ullam quos quisquam eum. Aliquam neque nam voluptatum maiores ad quia at. Sint cum eius dolore exercitationem quae fugit aut quia atque. Facere ad dolores eius, eaque hic modi.</span>
+        <span>Enim, placeat unde natus neque sunt doloribus hic atque, consequuntur esse voluptatibus aspernatur iusto quis aliquam vel! Cumque, illum, neque consectetur ut quod doloribus tempora adipisci provident odio libero mollitia!</span>
+        <span>Similique, possimus asperiores natus provident, dolorem officiis tempore maxime reiciendis quos, illum dolorum cumque exercitationem magni! Odio obcaecati distinctio commodi dignissimos ex porro nam? Nostrum quae aut deleniti saepe dolore?</span>
+      </p>
 
     </div>
   </div>
@@ -226,6 +193,9 @@
   <div class="bgimg-2"></div>
 
   <!-- ////////////////////////////////////////////// SKILLS ////////////////////////////////////////////// -->
+  <div id="skills">
+    <h3 class="title-section">Mes compétences</h3>
+  </div>
   <div class="container-fluid container-logos">
     <div class="row">
       <div class="col">
@@ -245,9 +215,7 @@
     </div>
   </div>
   <div class="container">
-    <div id="skills">
-      <h3 id="choose" class="choose">WHY CHOOSE ME?</h3>
-    </div>
+    <h3 class="choose">WHY CHOOSE ME?</h3>
   </div>
 
 
