--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <div class="menu">
         <ion-icon name="options"></ion-icon>
       </div>
-      <h1 class="letters name">Pascal Jurion</h1>
+      <h2 class="letters name">Pascal Jurion</h2>
       <h1 class="ml7 name" id="title">
         <span class="text-wrapper">
           <span class="letters">Développeur Web</span>
@@ -103,7 +103,7 @@
         Développeur Web
       </div>
       <div class="col">
-        <p>Titre profésionnel niveau III.</p>
+        <p>Titre profésionnel niveau 5 (bac +2).</p>
         <p>Wild Code school Reims (51)</p>
         <p>React Js - Node Js - Git - Méthode Agile</p>
       </div>
@@ -130,7 +130,7 @@
         Technicien supérieur en support informatique
       </div>
       <div class="col">
-        <p>Titre profésionnel niveau III.</p>
+        <p>Titre profésionnel niveau 5 (bac +2).</p>
         <p>Greta Soissons (02)</p>
         <p>windows serveur 2012 - Administratration linux - Architècture réseaux</p>
       </div>
@@ -155,36 +155,42 @@
   <!-- ////////////////////////////////////////////// EXPERIENCES ////////////////////////////////////////////// -->
 
   <div id="job">
-    <h3 class="title-section">MES EXPERIENCES PROFESSIONNELS</h3>
+    <h2 class="title-section">MES EXPERIENCES PROFESSIONNELS</h2>
   </div>
 
   <div class="container">
-    <div class="row">
-      <div class="col">
-        2019 - 2020
-      </div>
-      <p>
-        <span>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Exercitationem, harum alias necessitatibus obcaecati veniam consequuntur. Error, exercitationem corporis corrupti molestiae fugit quasi numquam, fugiat laboriosam aliquid animi, repudiandae quis nobis.</span>
-        <span>Veritatis sequi, corporis et velit doloribus architecto quas id eveniet natus suscipit? Libero, sunt autem, ipsa vero ullam expedita ut eligendi vel quaerat mollitia amet id, labore illo blanditiis sapiente!</span>
-        <span>Ex harum dolorem impedit itaque rerum quasi architecto quis ipsam, nihil quisquam voluptatibus repellat dolor animi dolore excepturi molestias explicabo maxime ullam ut nam magni laudantium labore voluptas! Nobis, hic.</span>
-        <span>Nihil cumque blanditiis dolore nostrum! Porro culpa aperiam excepturi rerum, alias temporibus velit quasi nisi nesciunt ex beatae quod reiciendis dolores ullam, magni provident corporis fugit! Totam ad ducimus aut!</span>
-        <span>Cum, aperiam dolore architecto porro, veritatis sint eveniet accusamus exercitationem facilis, debitis recusandae. Atque, nobis recusandae? Eaque facere quod commodi ab saepe. Illum aspernatur iste explicabo veritatis tenetur, voluptatem a!</span>
-        <span>Fugiat at enim nostrum voluptates perferendis nam, ab expedita ut eos asperiores ea excepturi, reiciendis, debitis neque voluptatibus ratione. Tenetur dolore nostrum dicta qui praesentium neque nemo debitis ullam autem.</span>
-        <span>Possimus ea dolorem accusantium recusandae fugit, vitae nostrum placeat nobis. Doloremque similique, praesentium culpa nisi neque eius nobis. Quidem ipsam officiis quo esse non facilis quasi dolorum odit voluptatem mollitia!</span>
-        <span>Explicabo, est veritatis sequi corporis molestiae iure id libero eligendi perspiciatis atque, autem temporibus quos, amet magnam voluptatibus necessitatibus commodi officia exercitationem consectetur deserunt error eius facere. Quod, autem doloremque.</span>
-        <span>Vitae veniam, obcaecati assumenda dicta fugiat qui ea expedita quod numquam iusto? Sit, modi reiciendis, repellat ea minima in suscipit ipsam cumque laboriosam voluptate quaerat tempora quisquam, perferendis quasi? Necessitatibus?</span>
-        <span>Magnam eum saepe molestiae facilis, harum eligendi voluptates. Modi natus pariatur dicta veniam deleniti, recusandae itaque, sit aut consequuntur voluptatibus quae porro similique alias quia ipsa, saepe doloremque! Atque, odio.</span>
-        <span>Provident, ullam repudiandae? Eum assumenda deserunt iste repellat? Optio ea asperiores nisi quo alias laborum possimus deleniti impedit qui omnis modi eum commodi excepturi aliquid vitae, id quia at reiciendis!</span>
-        <span>Reiciendis dolor officiis voluptatum totam quod minima illo. Mollitia laudantium, commodi obcaecati voluptates veniam officiis repudiandae nulla assumenda dolorum quisquam iure nobis perspiciatis at optio est odio! Dolorem, quidem error!</span>
-        <span>Est ipsum cupiditate pariatur eius quaerat, atque recusandae nisi blanditiis, at temporibus exercitationem, illo amet quasi. Illum voluptatum ea dolores sapiente consectetur quia consequuntur iste. Laborum labore tenetur incidunt reiciendis!</span>
-        <span>Obcaecati recusandae maiores vero, blanditiis quas soluta quam id doloremque aspernatur molestiae vitae pariatur quos consectetur labore excepturi. Non debitis sint quas magni veniam fuga natus ullam voluptatibus neque perspiciatis!</span>
-        <span>Repellendus, doloribus voluptatum? Doloribus fuga commodi et labore cupiditate voluptas ad aliquid eligendi optio esse, fugiat qui consectetur ducimus sequi natus expedita officiis similique tempora dolorem aliquam magnam tenetur! Reiciendis!</span>
-        <span>Quos rem inventore quisquam labore corrupti provident, harum odit esse optio voluptate beatae perferendis consequuntur modi accusantium autem commodi, amet, sapiente voluptates incidunt obcaecati voluptas tempore culpa! Saepe, in dolorum?</span>
-        <span>Molestiae illo reiciendis deleniti odio aut. Beatae sit praesentium quod magni ullam architecto nobis dignissimos, consequuntur blanditiis laudantium repellendus nam ratione minima, culpa mollitia repellat repudiandae ipsa optio molestiae voluptate.</span>
-        <span>Assumenda ullam quos quisquam eum. Aliquam neque nam voluptatum maiores ad quia at. Sint cum eius dolore exercitationem quae fugit aut quia atque. Facere ad dolores eius, eaque hic modi.</span>
-        <span>Enim, placeat unde natus neque sunt doloribus hic atque, consequuntur esse voluptatibus aspernatur iusto quis aliquam vel! Cumque, illum, neque consectetur ut quod doloribus tempora adipisci provident odio libero mollitia!</span>
-        <span>Similique, possimus asperiores natus provident, dolorem officiis tempore maxime reiciendis quos, illum dolorum cumque exercitationem magni! Odio obcaecati distinctio commodi dignissimos ex porro nam? Nostrum quae aut deleniti saepe dolore?</span>
-      </p>
+    <div class="row box-timeline">
+      <div class="ligne"></div>
+        <div class="rond r1" data-anim="1"><img class="experience-logo" src="./img/icons/dev.svg" alt="développeur web"></div>
+        <div class="rond r2" data-anim="2"><img class="experience-logo" src="./img/icons/method.svg" alt="technicien methode"></div>
+        <div class="rond r3" data-anim="3"><img class="experience-logo" src="./img/icons/factory.svg" alt="conducteur de ligne usine"></div>
+        <div class="rond r4" data-anim="4"><img class="experience-logo" src="./img/icons/army.svg" alt="militaire"></div>
+
+        <div class="box b1" data-anim="1">
+          <h3>Stage développeur web</h3>
+          <p>2020</p>
+          <p>Alain Renault Communication - Reims (51)</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias dicta officia a dolorum consectetur corporis?</p>
+        </div>
+        <div class="box b2" data-anim="2">
+          <h3>Technicien methode</h3>
+          <p>2005 / 2016</p>
+          <p>Eurotube - Chimay (Belgique)</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias dicta officia a dolorum consectetur corporis?</p>
+        </div>
+        <div class="box b3" data-anim="3">
+          <h3>Conducteur ligne automatisée</h3>
+          <p>1990 / 2005</p>
+          <p>Cebal - Ste Menehould (51)</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias dicta officia a dolorum consectetur corporis?</p>
+        </div>
+        <div class="box b4" data-anim="4">
+          <h3>Militaire</h3>
+          <p>1987 / 1990</p>
+          <p>68 Régiment d'artillerie - Lavalbone (01)</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias dicta officia a dolorum consectetur corporis?</p>
+        </div>
+      
 
     </div>
   </div>
@@ -330,7 +336,15 @@
   <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script> -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> -->
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script>
+               
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
+
+
+
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TweenMax.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
   <script src="js/anim.js"></script>
