--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 
 <head>
-  <meta charset="utf-8">
   <title>Pascal Jurion</title>
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -13,7 +13,8 @@
   <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 
-<body data-spy="scroll" data-target=".navbar" data-offset="50">
+<body>
+  <!-- <body data-spy="scroll" data-target=".navbar" data-offset="50"> -->
 
   <!-- ////////////////////////////////////////////// NAVBAR /////////////////////////////////////////////////// -->
   <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light opaque-navbar">
@@ -92,7 +93,7 @@
   <!-- ////////////////////////////////////////////// SCHOOL ////////////////////////////////////////////// -->
 
   <div id="school">
-    <h3 class="title-section">Mes formations</h3>
+    <h3 class="title-section">Formations</h3>
   </div>
   <div class="container">
     <div class="row step">
@@ -155,42 +156,49 @@
   <!-- ////////////////////////////////////////////// EXPERIENCES ////////////////////////////////////////////// -->
 
   <div id="job">
-    <h2 class="title-section">MES EXPERIENCES PROFESSIONNELS</h2>
+    <h2 class="title-section">EXPERIENCES PROFESSIONNELS</h2>
   </div>
 
   <div class="container">
-    <div class="row box-timeline">
+    <!-- <div class="row box-timeline">
       <div class="ligne"></div>
-        <div class="rond r1" data-anim="1"><img class="experience-logo" src="./img/icons/dev.svg" alt="développeur web"></div>
-        <div class="rond r2" data-anim="2"><img class="experience-logo" src="./img/icons/method.svg" alt="technicien methode"></div>
-        <div class="rond r3" data-anim="3"><img class="experience-logo" src="./img/icons/factory.svg" alt="conducteur de ligne usine"></div>
-        <div class="rond r4" data-anim="4"><img class="experience-logo" src="./img/icons/army.svg" alt="militaire"></div>
+      <div class="rond r1" data-anim="1"><img class="experience-logo" src="./img/icons/dev.svg" alt="développeur web">
+      </div>
+      <div class="rond r2" data-anim="2"><img class="experience-logo" src="./img/icons/method.svg"
+          alt="technicien methode"></div>
+      <div class="rond r3" data-anim="3"><img class="experience-logo" src="./img/icons/factory.svg"
+          alt="conducteur de ligne usine"></div>
+      <div class="rond r4" data-anim="4"><img class="experience-logo" src="./img/icons/army.svg" alt="militaire"></div>
 
-        <div class="box b1" data-anim="1">
-          <h3>Stage développeur web</h3>
-          <p>2020</p>
-          <p>Alain Renault Communication - Reims (51)</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias dicta officia a dolorum consectetur corporis?</p>
-        </div>
-        <div class="box b2" data-anim="2">
-          <h3>Technicien methode</h3>
-          <p>2005 / 2016</p>
-          <p>Eurotube - Chimay (Belgique)</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias dicta officia a dolorum consectetur corporis?</p>
-        </div>
-        <div class="box b3" data-anim="3">
-          <h3>Conducteur ligne automatisée</h3>
-          <p>1990 / 2005</p>
-          <p>Cebal - Ste Menehould (51)</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias dicta officia a dolorum consectetur corporis?</p>
-        </div>
-        <div class="box b4" data-anim="4">
-          <h3>Militaire</h3>
-          <p>1987 / 1990</p>
-          <p>68 Régiment d'artillerie - Lavalbone (01)</p>
-          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias dicta officia a dolorum consectetur corporis?</p>
-        </div>
-      
+      <div class="box b1" data-anim="1">
+        <h3>Stage développeur web</h3>
+        <p>2020</p>
+        <p>Alain Renault Communication - Reims (51)</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias
+          dicta officia a dolorum consectetur corporis?</p>
+      </div>
+      <div class="box b2" data-anim="2">
+        <h3>Technicien methode</h3>
+        <p>2005 / 2016</p>
+        <p>Eurotube - Chimay (Belgique)</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias
+          dicta officia a dolorum consectetur corporis?</p>
+      </div>
+      <div class="box b3" data-anim="3">
+        <h3>Conducteur ligne automatisée</h3>
+        <p>1990 / 2005</p>
+        <p>Cebal - Ste Menehould (51)</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias
+          dicta officia a dolorum consectetur corporis?</p>
+      </div>
+      <div class="box b4" data-anim="4">
+        <h3>Militaire</h3>
+        <p>1987 / 1990</p>
+        <p>68 Régiment d'artillerie - Lavalbone (01)</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio dignissimos enim obcaecati nobis, molestias
+          dicta officia a dolorum consectetur corporis?</p>
+      </div> -->
+
 
     </div>
   </div>
@@ -236,48 +244,39 @@
           an incredible sense of liberation.</p>
       </div>
 
-      <!-- <div class="social"> -->
       <div class="col-sm-4 social">
         <img class="social-logo" src="./img/icons/curious.svg" alt="Méthode scrum">
         <p class="social-header">Curieux</p>
         <p class="social-feature">Hardwork spotlights the character of people. Being responsible makes life better.
         </p>
 
-        <!-- </div> -->
       </div>
 
-      <!-- <div class="social"> -->
       <div class="col-sm-4 social">
         <img class="social-logo" src="./img/icons/creative.svg" alt="Méthode scrum">
         <p class="social-header">Créatif</p>
         <p class="social-feature">I like to have fun and genuinely give a sh*t about my clients. I get up in the
           morning because I love what I do, making beautiful designs come to life.</p>
 
-        <!-- </div> -->
       </div>
     </div>
   </div>
   <div class="container">
     <div class="row">
-      <!-- <div class="social"> -->
       <div class="col-sm-4 social">
         <img class="social-logo" src="./img/icons/historic.svg" alt="Méthode scrum">
         <p class="social-header">Expérience</p>
         <p class="social-feature">Laughter, it makes work more fun and transforms projects into a passion. I’ll treat
           you fairly, share some laughs and work with you to achieve your goals and exceed expectations. </p>
 
-        <!-- </div> -->
       </div>
-      <!-- <div class="social"> -->
       <div class="col-sm-4 social">
         <img class="social-logo" src="./img/icons/historic.svg" alt="Méthode scrum">
         <p class="social-header">PUNCTUAL</p>
         <p class="social-feature">Consistently being on time is the product of proper planning, personal discipline,
           and a respect for other people's time.</p>
 
-        <!-- </div> -->
       </div>
-      <!-- <div class="social"> -->
       <div class="col-sm-4 social">
         <img class="social-logo" src="./img/icons/historic.svg" alt="Méthode scrum">
         <p class="social-header">MAGIC</p>
@@ -285,12 +284,11 @@
           through small things that we care about. "When magic through nerves and reason passes, Imagination, force,
           and passion will thunder. The portrait of the world is changed." ~ Dejan Stojanovic</p>
 
-
-        <!-- </div> -->
       </div>
     </div>
   </div>
   <div class="bgimg-4"></div>
+
   <!-- ////////////////////////////////////////////// CONTACT ////////////////////////////////////////////// -->
   <div class="bgimg-2"></div>
   <div id="contact">
@@ -336,7 +334,7 @@
   <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script> -->
   <!-- <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script> -->
 
-               
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/ScrollMagic.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/debug.addIndicators.min.js"></script>
